# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import auditRouter from "./audit";
 import membersRouter from "./members";
 import memberGroupsRouter from "./member-groups";
+import visitorsRouter from "./visitors";
 import financeRouter from "./finance";
 import teachingRouter from "./teaching";
 import eventsRouter from "./events";
@@ -35,6 +36,7 @@ router.use("/auth", authRouter);
 router.use("/audit", auditRouter);
 router.use("/members", membersRouter);
 router.use("/member-groups", memberGroupsRouter);
+router.use("/visitors", visitorsRouter);
 router.use("/finance", financeRouter);
 router.use("/teaching", teachingRouter);
 router.use("/events", eventsRouter);
